@@ -1,5 +1,6 @@
 v8.3
 -----
+: Resolved another issue with the new currency detection function
 
 
 v8.2.1
